5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4160/executions/1593_1806.log
== TEST (2019-03-25 20:52:16) 
-- CODE:
n = int(input(" Digite o número de pessoas em um grupo: "))

from math import factorial
p = 1 - (365! / (365 - n)! ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
File "XXXX", line 4
    p = 1 - (365! / (365 - n)! ) * 1 / 365 ** n 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:52:49) 
-- CODE:
n = int(input(" Digite o número de pessoas em um grupo: "))

from math import factorial
p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:53:10) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import factorial
p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:53:20) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import factorial
p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:53:50) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import *
p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    p = 1 - factorial (365  / (365 - n) ) * 1 / 365 ** n 
ValueError: factorial() only accepts integral values
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:54:05) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import *
p = 1 - (factorial (365  / (365 - n) ) * 1 / 365 ** n 
print (round (p, 2))
-- ERROR:
File "XXXX", line 5
    print (round (p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:54:34) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import *
p = 1 - (factorial (365  / (365 - n) ) * (1 / 365 ** n) 
print(round(p, 2))
-- ERROR:
File "XXXX", line 5
    print(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:54:40) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))

from math import *
p = 1 - (factorial (365  / (365 - n) ) * (1 / 365 ** n) 
print(round(p, 2))
-- ERROR:
File "XXXX", line 5
    print(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:55:33) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import *
p = 1 - (factorial (365  / (365 - n) ) * (1 / 365 ** n) 
print(round(p, 2))
-- ERROR:
File "XXXX", line 4
    print(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:56:13) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import *
p = 1 - factorial (365  / (365 - n)  * (1 / 365 ** n) 
print(round(p, 2))
-- ERROR:
File "XXXX", line 4
    print(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:56:46) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
p = 1 - factorial (365 / (365 - n)  * (1 / 365 ** n) 
print(round(p, 2))
-- ERROR:
File "XXXX", line 4
    print(round(p, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:57:00) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = 1 - factorial (365 / (365 - n)  * (1 / 365 ** n) 
print(round(x, 2))
-- ERROR:
File "XXXX", line 4
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:57:21) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = float(1 - factorial (365 / (365 - n)  * (1 / 365 ** n))
print(round(x, 2))
-- ERROR:
File "XXXX", line 4
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 20:57:36) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365 / (365 - n)  * (1 / 365 ** n)
print(round(x, 2))
-- ERROR:
File "XXXX", line 4
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:15:34) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = 1 - factorial (365 / (365 - n)  * (1 / 365 ** n)
print(round(x, 2))
-- ERROR:
File "XXXX", line 4
    print(round(x, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:16:01) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = 1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)
print(round(x, 2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 10:16:30) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:16:36) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.17926
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:06:13) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.14771
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:11) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.142895
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:15) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.177885
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:20) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.197726
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:25) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.186576
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 19:10:31) 
-- CODE:
n = int(input(" Digite o numero de pessoas em um grupo: "))
from math import factorial
x = (1 - factorial (365) / factorial(365 - n)  * (1 / 365 ** n)) * 100
print(round(x, 2))
-- EXECUTION TIME:
0.152006
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
